Fix duplicate caret arrows on input-group unit selectors in dark mode hover

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -868,7 +868,8 @@ body {
 }
 
 /* Input-group unit selector: visible button style, no ghost caret */
-.input-group .unit-selector {
+.input-group .unit-selector,
+.input-group .unit-selector:hover {
   background-image: none;
   padding-right: 0.375rem;
 }
